<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tabView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.mainUi.TabsFragment">


    <TextView
        android:id="@+id/tab1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="1dp"
        android:layout_weight="1"
        android:background="#F1F1F1"
        android:gravity="center"
        android:text="@string/tab_reco"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tab2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:background="#E3E3E3"
        android:gravity="center"
        android:text="@string/tab_map"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tab3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:background="#D8D8D8"
        android:gravity="center"
        android:text="@string/tab_info"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tab4"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_weight="1"
        android:background="#C8C8C8"
        android:gravity="center"
        android:text="@string/tab_rating"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

</LinearLayout>
