<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="infoVm"
            type="de.hsh.sissi_kneipen.viewmodel.InfoViewModel" />
    </data>

    <ScrollView
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@color/colorBG"
                android:contentDescription="@string/content_des"
                app:myImageUrl="@{infoVm.imageUrl}" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@{infoVm.name}"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center|top"
                android:text="@{infoVm.description}"
                android:textColor="@color/colorBlack" />


            <LinearLayout
                android:id="@+id/goLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/info_button"
                    style="@android:style/Widget.Material.Light.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorBG"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/nagation_start"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sojourn_time"
                    android:textColor="@color/colorBlack" />

                <Chronometer
                    android:id="@+id/chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>





</layout>
